# test_parsing

./: README.md  pyproject.toml
test_parsing/: async_parser.py  async_parser_1.py  main.py  prod_page_parser.py  result_csv.csv  result_excel.xlsx  stuff.py
tests/: test_test_parsing.py
