[tool.poetry]
name = "test_parsing"
version = "0.1.0"
description = ""
authors = ["EvgeniiMorozov <emorozov1101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.7.4"
openpyxl = "^3.0.7"
Pillow = "^8.3.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
